Implementing Products REST APIs
