# src/main/java/com/liquibaseproject/api/ProductsApiController.java
@@ -1,0 +1,47 @@
+package com.liquibaseproject.api;
+
+import com.liquibaseproject.model.ModelApiResponse;
+import com.liquibaseproject.model.NewProduct;
+import com.liquibaseproject.model.Products;
+import java.util.UUID;
+
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.CookieValue;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import jakarta.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.7.0")
+@Controller
+@RequestMapping("${openapi.liquibaseProjectOpenAPI30.base-path:}")
+public class ProductsApiController implements ProductsApi {
+
+    private final ProductsApiDelegate delegate;
+
+    public ProductsApiController(@Autowired(required = false) ProductsApiDelegate delegate) {
+        this.delegate = Optional.ofNullable(delegate).orElse(new ProductsApiDelegate() {});
+    }
+
+    @Override
+    public ProductsApiDelegate getDelegate() {
+        return delegate;
+    }
+
+}
